NS problems